<resources>
    <string name="app_name">TempMonitorClient</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_updRegID">Update RegID</string>
    <string name="action_startSrv">Start Server</string>
    <string name="action_stopSrv">Stop Server</string>
    <string name="action_configSrv">Upload config to the Server</string>
    <string name="action_configSrvGet">Get config from the Server</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Server IP</string>
    <string name="pref_default_display_name">192.168.0.0</string>

    <string name="pref_default_user_title">User</string>
    <string name="pref_default_user">pi</string>

    <string name="pref_default_passwd_title">Password</string>
    <string name="pref_default_passwd">raspberry</string>

    <string name="pref_startSrvCmd">sudo python /home/pi/TempMonitorServer/brew_tempc.py start</string>
    <string name="pref_startSrvTitle">Start Tempmon service command</string>

    <string name="pref_stopSrvCmd">sudo python /home/pi/TempMonitorServer/brew_tempc.py stop</string>
    <string name="pref_stopSrvTitle">Stop Tempmon service command</string>

    <string name="pref_RegIDSrvFile">/home/pi/TempMonitorServer/regid.txt</string>
    <string name="pref_RegIDSrvFileTitle">RegID server file name</string>

    <string name="pref_configSrv">python /home/pi/TempMonitorServer/config.py set</string>
    <string name="pref_configSrvTitle">Set Server config script run</string>

    <string name="pref_configSrvGet">python /home/pi/TempMonitorServer/config.py get</string>
    <string name="pref_configSrvGetTitle">Get Server config script run</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
