<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:capitalize="none"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textUri"
        android:key="ServerIP"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />
    <EditTextPreference
        android:capitalize="none"
        android:defaultValue="@string/pref_default_user"
        android:inputType="text"
        android:key="user"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_default_user_title" />
    <EditTextPreference
        android:capitalize="none"
        android:defaultValue="@string/pref_default_passwd"
        android:inputType="textVisiblePassword"
        android:key="passwd"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_default_passwd_title" />

    <EditTextPreference
        android:capitalize="none"
        android:defaultValue="@string/pref_startSrvCmd"
        android:inputType="textVisiblePassword"
        android:key="startSrvCmd"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_startSrvTitle" />
    <EditTextPreference
        android:capitalize="none"
        android:defaultValue="@string/pref_stopSrvCmd"
        android:inputType="textVisiblePassword"
        android:key="stopSrvCmd"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_stopSrvTitle" />

    <EditTextPreference
        android:capitalize="none"
        android:defaultValue="@string/pref_configSrv"
        android:inputType="textVisiblePassword"
        android:key="configSrvCmd"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_configSrvTitle" />
    <EditTextPreference
        android:capitalize="none"
        android:defaultValue="@string/pref_configSrvGet"
        android:inputType="textVisiblePassword"
        android:key="configSrvGetCmd"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_configSrvGetTitle" />
</PreferenceScreen>
