<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.duckdns.denis_st.tempmonitorclient.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_updRegID"
        android:orderInCategory="100"
        android:title="@string/action_updRegID"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_startSrv"
        android:orderInCategory="100"
        android:title="@string/action_startSrv"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_stopSrv"
        android:orderInCategory="100"
        android:title="@string/action_stopSrv"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_configSrv"
        android:orderInCategory="100"
        android:title="@string/action_configSrv"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_configSrvGet"
        android:orderInCategory="100"
        android:title="@string/action_configSrvGet"
        app:showAsAction="never" />
</menu>
